...

@Preview(device = "spec:width=1000dp,height=1080dp")
@Composable
private fun DirectoryNavigationBarPreview() {
    FotoTheme {
        PreviewBox {
            DirectoryNavigationBar(
                directories =
                    listOf(
                        "Photos1",
                        "Subfolder1",
                        "Photos2",
                        "Subfolder2",
...
